--- a/index.html
+++ b/index.html
@@ -22,61 +22,61 @@
     </header>
 
     <main class="w-11/12 mx-auto my-6">
-        <section class="flex justify-between text-center">
+        <section class=" flex justify-start w-full">
             <!-- cards div -->
-            <div class="grid grid-cols-3 gap-3 ">
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/triangle.png" alt="" />
-                    <div class="p-5">
+            <div class="grid grid-cols-3 gap-3 w-4/5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3" src="images/triangle.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Triangle</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/rectangle.png" alt="" />
-                    <div class="p-5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3" src="images/rectangle.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rectangle</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = w x l</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/parallelogram.png" alt="" />
-                    <div class="p-5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3 mx-3" src="images/parallelogram.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Parallelogram</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = b x h</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/rhombus.png" alt="" />
-                    <div class="p-5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3" src="images/rhombus.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rhombus</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x d1 x d2</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/pentagon.png" alt="" />
-                    <div class="p-5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3" src="images/pentagon.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Pentagon</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x p x b</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg">
-                    <img class="" src="images/ellipse.png" alt="" />
-                    <div class="p-5">
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                    <img class="mt-3" src="images/ellipse.png" alt="" />
+                    <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Ellipse</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = PIab</p>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
             </div>
             <!-- area calculation div -->
-            <div class="bg-yellow-300">
-                <h1 class="text-xl font-medium underline">Area Calculation</h1>
+            <div class="ml-6 px-6 border border-gray-200 rounded-lg h-80 w-1/5">
+                <h1 class="text-xl font-medium underline text-center">Area Calculation</h1>
             </div>
         </section>
     </main>
