input fields added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Triangle</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x b x h</p>
+                        <!-- inputs -->
+                        <div class="flex flex-row gap-2 mb-3">
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="h">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                        </div>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
@@ -38,6 +49,17 @@
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rectangle</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = w x l</p>
+                        <!-- inputs -->
+                        <div class="flex flex-row gap-2 mb-3">
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="w">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="l">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                        </div>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
@@ -46,6 +68,17 @@
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Parallelogram</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = b x h</p>
+                        <!-- inputs -->
+                        <div class="flex flex-row gap-2 mb-3">
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="h">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                        </div>            
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
@@ -54,6 +87,17 @@
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rhombus</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x d1 x d2</p>
+                       <!-- inputs -->
+                       <div class="flex flex-row gap-2 mb-3">
+                        <div class="flex flex-row gap-2 justify-center items-center">
+                            <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                            <label for="" class="text-sm font-medium">cm</label>
+                        </div>
+                        <div class="flex flex-row gap-2 justify-center items-center">
+                            <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                            <label for="" class="text-sm font-medium">cm</label>
+                        </div>
+                    </div>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
@@ -62,6 +106,17 @@
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Pentagon</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = 0.5 x p x b</p>
+                        <!-- inputs -->
+                        <div class="flex flex-row gap-2 mb-3">
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="p">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                        </div>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
@@ -69,7 +124,18 @@
                     <img class="mt-3" src="images/ellipse.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Ellipse</h5>
-                        <p class="mb-3 font-normal text-gray-700">Area(A) = PIab</p>
+                        <p class="mb-3 font-normal text-gray-700">Area(A) = &#960;ab</p>
+                        <!-- inputs -->
+                        <div class="flex flex-row gap-2 mb-3">
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="a">
+                                <label for="" class="text-sm font-medium">cm</label>
+                            </div>
+                            <div class="flex flex-row gap-2 justify-center items-center">
+                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                                <label for="" class="text-md font-medium">cm</label>
+                            </div>
+                        </div>
                         <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
