--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
-                    <img class="mt-3 mx-3" src="images/parallelogram.png" alt="" />
+                    <img class="mt-3" src="images/parallelogram.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Parallelogram</h5>
                         <p class="mb-3 font-normal text-gray-700">Area(A) = b x h</p>
@@ -141,8 +141,41 @@
                 </div>
             </div>
             <!-- area calculation div -->
-            <div class="ml-6 px-6 border border-gray-200 rounded-lg h-80 w-1/5">
-                <h1 class="text-xl font-medium underline text-center">Area Calculation</h1>
+            <div class="ml-6 px-6 border border-gray-200 rounded-lg h-3/5 w-1/5">
+                <h1 class="text-xl font-medium underline text-center mb-6">Area Calculation</h1>
+                <div class="hidden">
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">1. Triangle</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">2. Rectangle</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">3. Parallelogram</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">4. Rhombus</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">5. Pentagon</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                    <div class="flex justify-between items-center mb-3">
+                        <h1 class="">6. Ellipse</h1>
+                        <h1 class="text-center">00</h1>
+                        <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
+                    </div>
+                </div>
+                
             </div>
         </section>
     </main>
