all area calculations done

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                         <!-- inputs -->
                         <div class="flex flex-row gap-2 mb-3">
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="w">
+                                <input type="number" name="" id="rectangle-first-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="w">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="l">
+                                <input type="number" name="" id="rectangle-last-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="l">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                         </div>
-                        <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
+                        <button id="btn-rectangle-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
@@ -71,15 +71,15 @@
                         <!-- inputs -->
                         <div class="flex flex-row gap-2 mb-3">
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
+                                <input type="number" name="" id="parallelogram-first-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="h">
+                                <input type="number" name="" id="parallelogram-last-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="h">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                         </div>            
-                        <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
+                        <button id="btn-parallelogram-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
@@ -90,15 +90,15 @@
                        <!-- inputs -->
                        <div class="flex flex-row gap-2 mb-3">
                         <div class="flex flex-row gap-2 justify-center items-center">
-                            <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                            <input type="number" name="" id="rhombus-first-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
                             <label for="" class="text-sm font-medium">cm</label>
                         </div>
                         <div class="flex flex-row gap-2 justify-center items-center">
-                            <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                            <input type="number" name="" id="rhombus-last-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
                             <label for="" class="text-sm font-medium">cm</label>
                         </div>
                     </div>
-                        <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
+                        <button id="btn-rhombus-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
@@ -109,15 +109,15 @@
                         <!-- inputs -->
                         <div class="flex flex-row gap-2 mb-3">
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="p">
+                                <input type="number" name="" id="pentagon-first-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="p">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
+                                <input type="number" name="" id="pentagon-last-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="b">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                         </div>
-                        <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
+                        <button id="btn-pentagon-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
                 <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
@@ -128,15 +128,15 @@
                         <!-- inputs -->
                         <div class="flex flex-row gap-2 mb-3">
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="a">
+                                <input type="number" name="" id="ellipse-first-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="a">
                                 <label for="" class="text-sm font-medium">cm</label>
                             </div>
                             <div class="flex flex-row gap-2 justify-center items-center">
-                                <input type="number" name="" id="" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
+                                <input type="number" name="" id="ellipse-last-input" class="bg-gray-50  text-sm rounded-lg block w-full p-2.5" placeholder="d1">
                                 <label for="" class="text-md font-medium">cm</label>
                             </div>
                         </div>
-                        <button class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
+                        <button id="btn-ellipse-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
             </div>
@@ -151,27 +151,27 @@
                     </div>
                     <div class="flex justify-between items-center mb-3">
                         <h1 class="">2. Rectangle</h1>
-                        <h1 class="text-center">00</h1>
+                        <h1 id="rectangle-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
                     </div>
                     <div class="flex justify-between items-center mb-3">
                         <h1 class="">3. Parallelogram</h1>
-                        <h1 class="text-center">00</h1>
+                        <h1 id="parallelogram-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
                     </div>
                     <div class="flex justify-between items-center mb-3">
                         <h1 class="">4. Rhombus</h1>
-                        <h1 class="text-center">00</h1>
+                        <h1 id="rhombus-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
                     </div>
                     <div class="flex justify-between items-center mb-3">
                         <h1 class="">5. Pentagon</h1>
-                        <h1 class="text-center">00</h1>
+                        <h1 id="pentagon-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
                     </div>
                     <div class="flex justify-between items-center mb-3">
                         <h1 class="">6. Ellipse</h1>
-                        <h1 class="text-center">00</h1>
+                        <h1 id="ellipse-calculation-field" class="text-center">0</h1>
                         <button class="px-6 py-1 bg-blue-500 rounded-lg text-white font-medium w-auto">Convert to m2</button>
                     </div>
                 </div>
@@ -180,6 +180,7 @@
         </section>
     </main>
     <!-- JS file added -->
+    <script src="js/common.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
