random color added in card

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Flowbite CDN added -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
+    <!-- <style>
+        .color-change:hover{
+            background-color: aqua;
+        }
+    </style> -->
   </head>
   <body>
     <header class="flex justify-between items-center w-11/12 mx-auto mt-6 bg-sky-200 rounded-lg">
@@ -25,7 +30,8 @@
         <section class=" flex justify-start w-full">
             <!-- cards div -->
             <div class="grid grid-cols-3 gap-3 w-4/5">
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- triangle div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/triangle.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Triangle</h5>
@@ -44,7 +50,8 @@
                         <button id="btn-triangle-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- rectangle div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/rectangle.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rectangle</h5>
@@ -63,7 +70,8 @@
                         <button id="btn-rectangle-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- parallelogram div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/parallelogram.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Parallelogram</h5>
@@ -82,7 +90,8 @@
                         <button id="btn-parallelogram-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- rhombus div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/rhombus.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Rhombus</h5>
@@ -101,7 +110,8 @@
                         <button id="btn-rhombus-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- pentagon div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/pentagon.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Pentagon</h5>
@@ -120,7 +130,8 @@
                         <button id="btn-pentagon-calculate" class="px-16 py-2 bg-blue-500 rounded-lg text-white font-medium">Calculate</button>
                     </div>
                 </div>
-                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center">
+                <!-- ellipse div -->
+                <div class="bg-white border border-gray-200 rounded-lg flex flex-col justify-center items-center color-change">
                     <img class="mt-3" src="images/ellipse.png" alt="" />
                     <div class="p-5 text-center">
                         <h5 class="mb-2 text-2xl font-bold">Ellipse</h5>
